--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding:0;
+    border:0;
+}
 h1 {
     font-family: fleur;
     margin: 0;
@@ -6,28 +11,30 @@ h1 {
     position: relative;
     top: 25px;
     left:300px;
-    background-color: #9aadbf;
+    background-color: #ccccff;
     width:50%;
     text-align:center
 }
 body {
-    background-color: #6d98ba;
+    background-color: #6699cc;
     font-family: indivisible;
 }
 
 header {
-    background-color: #9aadbf;
+    background-color: #ccccff;
     color: #210203;
-    padding: 5px;
+    padding: 0px;
     text-align: center;
     font-family: indivisible;
 }
 nav {
     width: 100%;
-    height: 100px;
+    height: 75px;
     font-family: indivisible;
     font-size:larger;
-    background-color: #9aadbf;
+    background-color: #ccccff;
+    position:relative;
+    top: 30px;
 }
 
 
@@ -47,7 +54,7 @@ section {
 }
 
 section#about {
-    background-color: #6d98ba;
+    background-color: #6699cc;
     font-family: indivisible;
  
 }
@@ -79,6 +86,21 @@ h2 {
     color: #210203;
     text-decoration: none;
 }
-a:hover {
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #6d98ba;
+  color: #210203;
+  text-align: center;
+}
+
+  a:hover {
     color: white;
   }
+  img {
+    padding: 25px;
+  }
+  
